client/styles/main.scss
/* ... */
/************************ Confimation Pop Up ***********************/
  .custom-ui.popup {
    border: 1px solid #5e6367;
    padding: 40px;
    color: #fff;
    background: #03111d;
}
.react-confirm-alert-body {
  border: 1px solid #5e6367;
    padding: 40px;
    color: #fff;
    background: #03111d;
}

.react-confirm-alert-overlay {
  .mission-mgt .filter-line {
    width: 100%;
    text-align: center;
    padding-top: 20px;
}
  background: transparent;
}

/**********************************************************************/

/********************** add-data-button ********************/
.add-data {
  background: transparent;
  padding: 4px 23px;
  border: 1px solid #989494;
}
.add-data:hover{

  background: #ed7d31; 
}

.mission-mgt .ReactTable.-striped.-highlight {

  overflow-x: hidden!important;
}

.row.route {
  margin-right: 15px;
  margin-left: 15px;
  margin-top: 20px;
}

.orders-assets .filter-line .add-button input {
  height: 26px!important;
  background-color: transparent!important;
  padding: 9px;
  text-align: left;
  color: white;
  cursor: default;
  width: 60px!important;

  
  font-size: 12px;
    font-weight: normal;
    text-transform: uppercase;
}
/******* Specification Add input Dropdown ******/
.mission-mgt .filter-line {

  padding-top: 8px;
}
.orders-assets .filter-line .add-button input:hover {
  background: #ed7d31!important;
}
.orders-assets .header-line {
overflow: unset!important;
  margin-bottom: 46px;
}
.arrow-font {
  position: relative;
  top: 0px;
  right: 17px;
}

span.specifi-text {
  padding-left: 10px;
}



/************************ upload file name css ************************/
a.name-link {
  position: absolute;
  top: 20px;
  right: 0px;
  color: #fff;
}

a.name-link-content-block{
  position: absolute;
  top: 20px;
  color: #fff;
}

.main-u {
  position: relative;
  top: -15px;
  padding-bottom: 10px;
}

/****************************************************************************************/

.orders-assets .filter-line .add-button {
  display: inline-block!important;
  text-align: center!important;
}

/*********************************************************** USER ROLES personal checkbox ***************************/
#personnelform label {
  position: absolute;
  right: 0px;
  top: -18px;
}

.btn-warning.active, .btn-warning:active, .open > .dropdown-toggle.btn-warning {
  color: #fff;
   background-color: transparent!important;
   border: 1px solid #687882!important; 
}
btn-warning.focus, .btn-warning:focus {
  color: #fff;
  background-color:  transparent!important;
  border: 1px solid #687882!important; 
  outline: 0px auto -webkit-focus-ring-color!important; 

}

/**************** mission -summary-detail ***********************/
.mission-detail-view.info-field input {
  width: 100%!important;
}

.mssnDetailUpldBlock .upload-imagery {
  display: none !important;
}

.mssnDetailUpldBlock .upload-block {
  margin-bottom: 0px !important;
}

/*********************** TIMELINE BORDER ********************************/
.timeline-border {
  border: 1px solid #ed7d31;
  padding: 0PX;
}




.timeline-border .rt-thead.-header {
  border-top: 1px solid #ed7d31;
  border-bottom: 1px solid #ed7d31;

}
.rt-tr.-odd {
  height: 50px;
}
/*************************************** actions-btn-csss *********************************************/
a.edit-btn {
  background: #2e6da4;
  color: #fff;
  text-decoration: none;
  padding: 5px 5px 5px 7px;
  border-radius: 3px;
  font-size: 12px;
  margin-right: 4px;
}
a.delete-btn {
  background:#d9534f;
  color: #fff;
  text-decoration: none;
  padding: 5px 6px 5px 2px;
  border-radius: 3px;
  font-size: 12px;
  margin-right: 4px;
}
a.coll-valid-btn {
  background: #38964e;
  color: #fff;
  text-decoration: none;
  padding: 5px 5px 5px 2px;
  border-radius: 3px;
  font-size: 12px;
  margin-right: 4px;
}
a.resubmit-btn {
  background: #b551d6;
  color: #fff;
  text-decoration: none;
  padding: 5px 5px 5px 2px;
  border-radius: 3px;
  font-size: 12px;
  margin-right: 4px;
}
.btn-xs {
  padding: 2px 5px!important;
}
.actions-btn {
  text-align: left;
  margin-left: 20px;
}
.__react_component_tooltip.type-warning {
  color: #fff;
  background-color: #ed7d31 !important;
}
.ReactTable .rt-td {

  padding: 13px 5px;
}
.export.btn-xs {
  background: #38964e;
}
.multiple-select{
  height: 221px !important;
}

/**************************** TimeLine Pagination ************************************/
#timeline .-next{
  width: 20px;
  font-size: 11px;
}

#timeline .-previous{
  width: 20px;
  font-size: 11px;
}
#timeline .-pagination {
  padding: 3px 0px;
}

.rct-item-content{
  display: block !important;
  text-align: center !important;
}

.collection-valid-header{
    text-align: center;
    font-size: 18px;
    color: #cee3f5;
}
/****************** MULTISELECT **************************/
select.form-control.multiple-select {
  padding: 0px 1px !important;
  }
  /******************** progress bar css **********************/

  .progress {
    height: 7px!important;
  }

  .rct-scroll {
    border-right: 1px solid #ed7d31;
}

/************************************************** cesium map search box icon alignment  ****************/    

#default-fly-to svg.cesium-svgPath-svg {
   position: absolute;
  right: 27px;
  top: 80px;
  cursor: pointer;
  width: 23px;
  
}
#default-fly-to path {
  fill: #ed7d31;
}
/************************************************ mission summary upload button aligntment css *******************************/  
input#uploadFile0 {
  line-height: 25px;
  padding-left: 2px;
}
/********************************************  compass css ****************************/

.cesium-svgPath-svg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

